# metricforge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: generate_sample_data.py  init_db.py
examples/: basic_usage.py
metrics/: ecommerce.yaml
src/metricforge/: __init__.py  store.py
src/metricforge/cli/: __init__.py  main.py
src/metricforge/compiler/: __init__.py  sql_builder.py
src/metricforge/executor/: __init__.py  duckdb_executor.py
src/metricforge/models/: __init__.py  metric.py  query.py  semantic_model.py
src/metricforge/parser/: __init__.py  loader.py
tests/: __init__.py  conftest.py  test_cli.py  test_compiler.py  test_executor.py  test_models.py  test_parser.py  test_store.py
